<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/question1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/a_button_label" />

            <Button
                android:id="@+id/b_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/b_button_label"/>

            <Button
                android:id="@+id/c_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/c_button_label"/>

            <Button
                android:id="@+id/d_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/d_button_label"/>
            <Button
                android:id="@+id/e_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/e_button_label" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/prev_button_label" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/submit_button_label"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                style="?android:attr/borderlessButtonStyle"
                android:textStyle="bold"
                android:textColor="#C6AB39"
                android:text="@string/next_button_label" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>